Fix button alignment

--- a/main.css
+++ b/main.css
@@ -49,7 +49,6 @@ canvas {
 }
 
 .key {
-    /* transform: translateY(0%); */
     border: #000000;
     border-style: solid;
     border-width: 2px;
@@ -59,6 +58,7 @@ canvas {
     background: #ffffff;
     /* border-radius: 3px; */
     font-size: calc(8vh*20/45);
+    line-height: calc(8vh*20/45) !important;
 }
 
 .key:hover {
